logs/03_prepro_22924643.err
  File "/gpfs/projects/kuhl_lab/wanjiag/MONSTERA/derivatives/scripts/python_code/preprocessing.py", line 48
    if (sub == 'sub-MONSTERA29' & run == 'task-02'){
                                                   ^
SyntaxError: invalid syntax
/home/wanjiag/.local/lib/python3.9/site-packages/nilearn/input_data/__init__.py:27: FutureWarning: The import path 'nilearn.input_data' is deprecated in version 0.9. Importing from 'nilearn.input_data' will be possible at least until release 0.13.0. Please import from 'nilearn.maskers' instead.
  warnings.warn(message, FutureWarning)
